# Cachedb

./: .gitignore  CMakeCache.txt  CMakeLists.txt  INSTALLATION_GUIDE.md  LICENSE  Makefile  README.md  build_installer.bat  connect_db.ps1  installer.iss  post_install_setup.ps1  start_web_interface.bat  test_installer.ps1
desktop-app/: electron.js  package-lock.json  package.json  preload.js
desktop-app/public/: index.html  manifest.json
desktop-app/src/: App.js
desktop-app/src/components/: Analytics.js  CLI.js  ClientSDK.js  ClusterManager.js  ConfigManager.js  ConnectionManager.js  Dashboard.js  KeyBrowser.js  LoadingSpinner.js  PubSubMonitor.js  Settings.js  Sidebar.js  SystemMonitor.js  Toast.js
include/: arc_cache.h  cluster.h  data_types.h  db.h  enhanced_cache.h  hyperloglog.h  lfu_cache.h  lru_cache.h  project_manager.h  protocol.h  pubsub.h
src/: arc_cache.cpp  cluster.cpp  data_types.cpp  db.cpp  enhanced_cache.cpp  enhanced_main.cpp  enhanced_server.cpp  hyperloglog.cpp  lfu_cache.cpp  lru_cache.cpp  main.cpp  protocol.cpp  pubsub.cpp  server.cpp
web_interface/: app.py
web_interface/templates/: index.html  login.html
