cmake_minimum_required(VERSION 3.10)
project(mydb)
set(CMAKE_CXX_STANDARD 17)
include_directories(include)
add_executable(mydb src/main.cpp src/db.cpp src/lru_cache.cpp src/lfu_cache.cpp src/hyperloglog.cpp src/arc_cache.cpp)
add_executable(mydb_server src/server.cpp src/db.cpp src/lru_cache.cpp src/lfu_cache.cpp src/arc_cache.cpp src/cluster.cpp src/hyperloglog.cpp src/pubsub.cpp)
add_library(lfu_cache STATIC src/lfu_cache.cpp)
set(CMAKE_VERBOSE_MAKEFILE ON)
target_link_libraries(mydb_server ws2_32 libcurl ssl crypto)
